# avr_stack_analyzer

./: .gitignore  Cargo.toml  LICENSE  README.md  avr_stack_errors
.cargo/: config.toml
.github/workflows/: rust.yml
src/: analysis.rs  avr-stack.rs  avr_stack.rs  binary_loader.rs  cpu.rs  debug_utils.rs  elf.rs  lib.rs  main.rs  utils.rs
test/: avr_stack
tools/: generate_graph.sh  validate_dot.sh
