[package]
name = "avr_stack"
version = "0.1.0"
edition = "2021"
authors = ["AVR Stack Analyzer Contributors"]
description = "Stack usage analyzer for AVR microcontroller binaries"

[dependencies]
object = "0.30.0"  # For ELF file parsing
clap = "4.0"  # For command-line argument parsing
serde = { version = "1.0", features = ["derive"] }  # For JSON serialization
serde_json = "1.0"  # For JSON output
