[package]
name = "avr_stack"
version = "0.1.0"
edition = "2021"
authors = ["AVR Stack Analyzer Contributors"]
description = "Stack usage analyzer for AVR microcontroller binaries"

[dependencies]
object = "0.26.2"  # For ELF file parsing
clap = "3.0"  # For command-line argument parsing
serde = { version = "1.0", features = ["derive"] }  # For JSON serialization
serde_json = "1.0"  # For JSON output
hex = "0.4"  # Use the hex crate instead of intel_hex
